2025-10-23 -서브페이지 반응형 css추가

--- a/sub06.html
+++ b/sub06.html
@@ -41,34 +41,34 @@
 				<div>
 					<div class="fieldset">
 						<div class="tab-list">
-							<button type="button" class="krds-btn tab medium">
+							<button  id="tab_login_01" type="button" class="krds-btn fourth tab medium">
 								산불일반
 							</button>
-							<button type="button" class="krds-btn tab medium">
+							<button id="tab_login_02" type="button" type="button" class="krds-btn fourth tab medium">
 								산불예방
 							</button>
-							<button type="button" class="krds-btn tab medium">
+							<button id="tab_login_03" type="button" type="button" class="krds-btn fourth tab medium">
 								대형산불
 							</button>
-							<button type="button" class="krds-btn tab medium">
+							<button id="tab_login_04" type="button" type="button" class="krds-btn fourth tab medium">
 								산불진화
 							</button>
-							<button type="button" class="krds-btn tab medium">
+							<button id="tab_login_05" type="button" type="button" class="krds-btn fourth tab medium">
 								산불조사 감식 및 처벌
 							</button>
-							<button type="button" class="krds-btn tab medium">
+							<button id="tab_login_06" type="button" type="button" class="krds-btn fourth tab medium">
 								산불피해
 							</button>
-							<button type="button" class="krds-btn tab medium">
+							<button id="tab_login_07" type="button" type="button" class="krds-btn fourth tab medium">
 								산불피해지복원
 							</button>
-							<button type="button" class="krds-btn tab medium">
+							<button id="tab_login_08" type="button" type="button" class="krds-btn fourth tab medium">
 								국민대처요령안내
 							</button>
-							<button type="button" class="krds-btn tab medium">
+							<button id="tab_login_09" type="button" type="button" class="krds-btn fourth tab medium">
 								산불과 숲 가꾸기(연료관리)
 							</button>
-							<button type="button" class="krds-btn tab medium">
+							<button id="tab_login_10" type="button" type="button" class="krds-btn fourth tab medium">
 								국립산림과학원과 산불
 							</button>
 						</div>
@@ -82,111 +82,143 @@
 					산불제대로알기 PDF 다운로드
 				</button>
 			</div>
-			<div>산불일반</div>
-			<!-- accordion -->
-			<div class="krds-accordion type-line">
-				<div class="accordion-item">
-					<h5 class="accordion-header"><button type="button" id="accordionHeaderSample01" class="btn-accordion" aria-controls="accordionCollapseSample01">아코디언 타이틀 영역</button></h5>
-					<div id="accordionCollapseSample01" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample01">
-						<div class="accordion-body">
-							<!-- accordion contents -->
-							아코디언 내용 영역
-							<!-- //accordion contents -->
+			<!-- tab contents -->
+			<div class="tab-conts-wrap">
+				<section id="panel_login_01" aria-labelledby="tab_login_01" class="tab-conts active" data-quick-nav="false">
+					<h3 class="sr-only">산불일반</h3>
+					<!-- accordion -->
+					<h2>산불일반</h2>
+					<div class="krds-accordion type-line">
+						<div class="accordion-item">
+							<h5 class="accordion-header"><button type="button" id="accordionHeaderSample01" class="btn-accordion" aria-controls="accordionCollapseSample01">아코디언 타이틀 영역</button></h5>
+							<div id="accordionCollapseSample01" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample01">
+								<div class="accordion-body">
+									<!-- accordion contents -->
+									아코디언 내용 영역
+									<!-- //accordion contents -->
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
+							<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
+								<div class="accordion-body">
+									<!-- accordion contents -->
+									아코디언 내용 영역
+									<!-- //accordion contents -->
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
+							<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
+								<div class="accordion-body">
+									<!-- accordion contents -->
+									아코디언 내용 영역
+									<!-- //accordion contents -->
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
+							<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
+								<div class="accordion-body">
+									<!-- accordion contents -->
+									아코디언 내용 영역
+									<!-- //accordion contents -->
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
+							<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
+								<div class="accordion-body">
+									<!-- accordion contents -->
+									아코디언 내용 영역
+									<!-- //accordion contents -->
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
+							<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
+								<div class="accordion-body">
+									<!-- accordion contents -->
+									아코디언 내용 영역
+									<!-- //accordion contents -->
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
+							<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
+								<div class="accordion-body">
+									<!-- accordion contents -->
+									아코디언 내용 영역
+									<!-- //accordion contents -->
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
+							<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
+								<div class="accordion-body">
+									<!-- accordion contents -->
+									아코디언 내용 영역
+									<!-- //accordion contents -->
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
+							<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
+								<div class="accordion-body">
+									<!-- accordion contents -->
+									아코디언 내용 영역
+									<!-- //accordion contents -->
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
+							<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
+								<div class="accordion-body">
+									<!-- accordion contents -->
+									아코디언 내용 영역
+									<!-- //accordion contents -->
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="accordion-item">
-					<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
-					<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
-						<div class="accordion-body">
-							<!-- accordion contents -->
-							아코디언 내용 영역
-							<!-- //accordion contents -->
-						</div>
-					</div>
-				</div>
-				<div class="accordion-item">
-					<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
-					<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
-						<div class="accordion-body">
-							<!-- accordion contents -->
-							아코디언 내용 영역
-							<!-- //accordion contents -->
-						</div>
-					</div>
-				</div>
-				<div class="accordion-item">
-					<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
-					<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
-						<div class="accordion-body">
-							<!-- accordion contents -->
-							아코디언 내용 영역
-							<!-- //accordion contents -->
-						</div>
-					</div>
-				</div>
-				<div class="accordion-item">
-					<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
-					<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
-						<div class="accordion-body">
-							<!-- accordion contents -->
-							아코디언 내용 영역
-							<!-- //accordion contents -->
-						</div>
-					</div>
-				</div>
-				<div class="accordion-item">
-					<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
-					<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
-						<div class="accordion-body">
-							<!-- accordion contents -->
-							아코디언 내용 영역
-							<!-- //accordion contents -->
-						</div>
-					</div>
-				</div>
-				<div class="accordion-item">
-					<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
-					<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
-						<div class="accordion-body">
-							<!-- accordion contents -->
-							아코디언 내용 영역
-							<!-- //accordion contents -->
-						</div>
-					</div>
-				</div>
-				<div class="accordion-item">
-					<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
-					<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
-						<div class="accordion-body">
-							<!-- accordion contents -->
-							아코디언 내용 영역
-							<!-- //accordion contents -->
-						</div>
-					</div>
-				</div>
-				<div class="accordion-item">
-					<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
-					<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
-						<div class="accordion-body">
-							<!-- accordion contents -->
-							아코디언 내용 영역
-							<!-- //accordion contents -->
-						</div>
-					</div>
-				</div>
-				<div class="accordion-item">
-					<h5 class="accordion-header"><button type="button" id="accordionHeaderSample02" class="btn-accordion" aria-controls="accordionCollapseSample02">아코디언 타이틀 영역</button></h5>
-					<div id="accordionCollapseSample02" class="accordion-collapse collapse" aria-labelledby="accordionHeaderSample02">
-						<div class="accordion-body">
-							<!-- accordion contents -->
-							아코디언 내용 영역
-							<!-- //accordion contents -->
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- //accordion -->
+					<!-- //accordion -->	
+				</section>
+				<section id="panel_login_02" aria-labelledby="tab_login_02" class="tab-conts" data-quick-nav="false">
+					<h2>산불예방</h2>
+				</section>
+				<section id="panel_login_03" aria-labelledby="tab_login_03" class="tab-conts" data-quick-nav="false">
+					<h2>대형산불</h2>
+				</section>
+				<section id="panel_login_04" aria-labelledby="tab_login_04" class="tab-conts" data-quick-nav="false">
+					<h2>산불진화</h2>
+				</section>
+				<section id="panel_login_05" aria-labelledby="tab_login_05" class="tab-conts" data-quick-nav="false">
+					<h2>산불조사 감식 및 처벌</h2>
+				</section>
+				<section id="panel_login_06" aria-labelledby="tab_login_06" class="tab-conts" data-quick-nav="false">
+					<h2>산불피해</h2>
+				</section>
+				<section id="panel_login_07" aria-labelledby="tab_login_07" class="tab-conts" data-quick-nav="false">
+					<h2>산불피해지복원</h2>
+				</section>
+				<section id="panel_login_08" aria-labelledby="tab_login_07" class="tab-conts" data-quick-nav="false">
+					<h2>국민대처요령안내</h2>
+				</section>
+				<section id="panel_login_09" aria-labelledby="tab_login_07" class="tab-conts" data-quick-nav="false">
+					<h2>산불과 숲 가꾸기(연료관리)</h2>
+				</section>
+				<section id="panel_login_10" aria-labelledby="tab_login_07" class="tab-conts" data-quick-nav="false">
+					<h2>국립산림과학원과 산불</h2>
+				</section>
 		</div>
 		<!-- 컨텐츠 영역-->
 	</div>
